cluster/apps/seat/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seat
  namespace: seat
spec:
  selector:
    app: seat
  ports:
    - protocol: TCP
      port: 80
